--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="inner">
       <div class="maintext">
         <p class="maintitle">
-          정직한 가격의<br>
-          <strong>프리미엄 면도용품 구독 서비스</strong>
+          정직하지 못한 가격의<br>
+          <strong>싸구려 면도용품 구독 서비스</strong>
         </p>
-        <p class="subtitle">독일산 5중날 8,900원, 첫 가입시 면도기를 드려요</p>
+        <p class="subtitle">독일산 5중날 80,900원, 첫 가입시 벽돌을 드려요</p>
         <a href="#" class="common-btn">더 알아보기</a>
       </div>
     </div>
